adding example dataset
Signed-off-by: vsoch <vsochat@stanford.edu>

--- a/dataset.html
+++ b/dataset.html
@@ -148,7 +148,7 @@
   </ul>
 
   <div class="note">
-    This ideogram is created with randomly assigned expression values, and is under development.
+    This visualization is from an actual dataset, and is under development.
   </div>
   <script type="text/javascript">
 
@@ -222,7 +222,7 @@
     chrWidth: 20,
 //    showNonNuclearChromosomes: true,
     dataDir: 'data/',
-    annotationsPath: 'data/yeast-annots-random.json',
+    annotationsPath: 'data/yeast-annots.json',
     annotationsLayout: 'histogram',
     barWidth: 3,
     filterable: true
